# hw3-zhannanna

./: .gitignore  Makefile  README.md  index.md  myst.yml  pyproject.toml
.github/workflows/: pages.yml
ligotools/: utils.py
ligotools/tests/: test_readligo.py  test_utils.py
